# UnrealLink

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Directory.Build.props  License.txt  NuGet.Config  README.md  SETUP.md  UnrealLink.sln  build.gradle  build.gradle.kts  cpp.gradle  cpp.gradle.kts  gradle.properties  gradlew  gradlew.bat  model.gradle  model.gradle.kts  newREADME.md  resharper_unreal.sln  runVisualStudio.ps1  settings.gradle  settings.gradle.kts  settings.ps1  setup_unreal_plugin.cmd  versions.gradle.kts
.run/: Debug backend.run.xml  UnrealLink [runIde].run.xml
buildSrc/: build.gradle.kts
protocol/: build.gradle.kts  settings.gradle.kts
src/cpp/RiderLink/Source/RiderLink/Private/RdEditorProtocol/: CMakeLists.txt
src/cpp/RiderLink/Source/RiderLink/Private/RdEditorProtocol/RdEditorModel/: RdEditorModel.cpp
src/cpp/RiderLink/Source/RiderLink/Private/RdEditorProtocol/RdEditorRoot/: RdEditorRoot.cpp  RdEditorRoot.h
src/cpp/RiderLink/Source/RiderLink/Private/RdEditorProtocol/UE4Library/: BlueprintStruct.cpp  BlueprintStruct.h  StringRange.h  UE4Library.cpp  UE4Library.h  UnrealLogMessage.cpp
src/cpp/RiderLink/Source/RiderLink/Public/RdEditorProtocol/: CMakeLists.txt  instantiations.cpp  instantiations.h
src/cpp/RiderLink/Source/RiderLink/Public/RdEditorProtocol/RdEditorModel/: RdEditorModel.cpp  RdEditorModel.h
src/cpp/RiderLink/Source/RiderLink/Public/RdEditorProtocol/RdEditorRoot/: RdEditorRoot.h
src/cpp/RiderLink/Source/RiderLink/Public/RdEditorProtocol/UE4Library/: BlueprintFunction.h  BlueprintHighlighter.h  BlueprintReference.h  EmptyScriptCallStack.h  IScriptCallStack.h  IScriptMsg.h  LogMessageInfo.h  PlayState.cpp  PlayState.h  ScriptCallStack.h  ScriptCallStackFrame.h  ScriptMsgCallStack.h  ScriptMsgException.h  StringRange.h  UClass.h  UE4Library.cpp  UnableToDisplayScriptCallStack.h  UnrealLogEvent.cpp  UnrealLogEvent.h
tools/: dotnet.cmd
(+827 files in other folders)
